--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -111,7 +111,7 @@ html button {
 }
 
 body {
-  background-color: hsla(137, 8%, 95%, 1);
+  background-color: rgb(241, 243, 242);
   background-size: cover;
   display: flex;
   flex-direction: column;
